// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. IconDiamond renders with different colours 1`] = `
<g
  fill="#facade"
  stroke="#c0ffee"
>
  <path />
</g>
`;

exports[`2. IconTwitter renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`3. IconVideo renders with different colours 1`] = `
Array [
  <rect
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`4. IconEmail renders with different colours 1`] = `
<g
  fill="#facade"
  stroke="#c0ffee"
>
  <path />
</g>
`;

exports[`5. IconStar renders with different colours 1`] = `
<polygon
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`6. IconFacebook renders with different colours 1`] = `
<g
  fill="#facade"
  stroke="#c0ffee"
>
  <path />
</g>
`;
